--- a/model/hios.tex
+++ b/model/hios.tex
@@ -1,7 +1,7 @@
 \begin{figure}
 \label{hios}
 \caption{Haskell interoperation operational semantics}
-\onehalfspacing
+%\onehalfspacing
 \begin{center}
 \begin{tabular}{rcl}
 % hm - number
