--- a/model/hit.tex
+++ b/model/hit.tex
@@ -1,6 +1,7 @@
 \begin{figure}
 \label{hit}
 \caption{Haskell interoperation terms}
+%\onehalfspacing
 \begin{center}
 \begin{tabular}{lcl}
 $e_{H}$ & $=$ & $\cdots$ $\vert$ $^{T}HM^{T}$ $e_{M}$ $\vert$ $^{T}HS$ $e_{S}$ \\
