--- a/model/mit.tex
+++ b/model/mit.tex
@@ -1,6 +1,7 @@
 \begin{figure}
 \label{mit}
 \caption{ML interoperation terms}
+%\onehalfspacing
 \begin{center}
 \begin{tabular}{lcl}
 $e_{M}$ & $=$ & $\cdots$ $\vert$ $^{T}MH^{T}$ $e_{H}$ $\vert$ $^{T}MS$ $e_{S}$ \\
