--- a/model/sios.tex
+++ b/model/sios.tex
@@ -1,7 +1,7 @@
 \begin{figure}
 \label{sios}
 \caption{Scheme interoperation operational semantics}
-\onehalfspacing
+%\onehalfspacing
 \begin{center}
 \begin{tabular}{rcl}
 $\mathscr{E}[SH^{N}$ $\overline{n}]_{S}$ & $\rightarrow$ & $\mathscr{E}[\overline{n}]$ \\
