--- a/model/sit.tex
+++ b/model/sit.tex
@@ -1,6 +1,7 @@
 \begin{figure}
 \label{sit}
 \caption{Scheme interoperation terms}
+%\onehalfspacing
 \begin{center}
 \begin{tabular}{lcl}
 $e_{S}$ & $=$ & $\cdots$ $\vert$ $SH^{T}$ $e_{H}$ $\vert$ $SM^{T}$ $e_{M}$ \\
