--- a/model/mios.tex
+++ b/model/mios.tex
@@ -1,7 +1,7 @@
 \begin{figure}
 \label{mios}
 \caption{ML interoperation operational semantics}
-\onehalfspacing
+%\onehalfspacing
 \begin{center}
 \begin{tabular}{rcl}
 % mh - number
