Finished ch 4 first draft.

--- a/thesis.tex
+++ b/thesis.tex
@@ -104,6 +104,9 @@
 \input{chapter-1.tex}
 \input{chapter-2.tex}
 \input{chapter-3.tex}
+\input{chapter-4.tex}
+\input{chapter-5.tex}
+\input{chapter-6.tex}
 
 \clearpage
 \bibliography{bibliography}
