Finished the big interop system reviews.  Added bib entries for most of David's refs.

--- a/bibliography.bib
+++ b/bibliography.bib
@@ -1,46 +1,112 @@
+@article{benton05,
+  author = {Nick Benton},
+  title = {Embedded interpreters},
+  journal = {J. Funct. Program.},
+  volume = {15},
+  number = {4},
+  year = {2005},
+  issn = {0956-7968},
+  pages = {503--542},
+  doi = {http://dx.doi.org/10.1017/S0956796804005398},
+  publisher = {Cambridge University Press},
+  address = {New York, NY, USA},
+}
 
+@article{blume04,
+  author = {Matthias Blume and David McAllester},
+  title = {A sound (and complete) model of contracts},
+  journal = {SIGPLAN Not.},
+  volume = {39},
+  number = {9},
+  year = {2004},
+  issn = {0362-1340},
+  pages = {189--200},
+  doi = {http://doi.acm.org/10.1145/1016848.1016876},
+  publisher = {ACM},
+  address = {New York, NY, USA},
+}
 
-@inproceedings{DualContouring,
- author = {Tao Ju and Frank Losasso and Scott Schaefer and Joe Warren},
- title = {Dual contouring of hermite data},
- booktitle = {SIGGRAPH '02: Proceedings of the 29th annual conference on Computer graphics and interactive techniques},
- year = {2002},
- isbn = {1-58113-521-1},
- pages = {339--346},
- location = {San Antonio, Texas},
- doi = {http://doi.acm.org/10.1145/566570.566586},
- publisher = {ACM Press},
- address = {New York, NY, USA},
- }
- 
- 
-@inproceedings{QuadricErrorMetrics,
- author = {Michael Garland and Paul S. Heckbert},
- title = {Surface simplification using quadric error metrics},
- booktitle = {SIGGRAPH '97: Proceedings of the 24th annual conference on Computer graphics and interactive techniques},
- year = {1997},
- isbn = {0-89791-896-7},
- pages = {209--216},
- doi = {http://doi.acm.org/10.1145/258734.258849},
- publisher = {ACM Press/Addison-Wesley Publishing Co.},
- address = {New York, NY, USA},
- }
+@manual{ecma06,
+  title = {Common Language Infrastructure (CLI)},
+  OPTorganization = {ECMA},
+  OPTedition = {4th},
+  OPTmonth = {June},
+  OPTyear = {2006},
+}
 
- 
-@misc{NormalMapper,
-  key           = {ATI NormalMapper},
-  title         = {{ATI} {N}ormal{M}apper},
-  howpublished  = {http://ati.amd.com/developer/tools.html},
- }
- 
- 
-@misc{nVidiaMelody,
-  key           = {nVidia Melody},
-  title         = {n{V}idia {M}elody},
-  howpublished  = {http://developer.nvidia.com/object/melody\_home.html},
- }
-  
-  
-  
- 
- 
+@article{felleisen02,
+  author = {Robert Bruce Findler and Matthias Felleisen},
+  title = {Contracts for higher-order functions},
+  journal = {SIGPLAN Not.},
+  volume = {37},
+  number = {9},
+  year = {2002},
+  issn = {0362-1340},
+  pages = {48--59},
+  doi = {http://doi.acm.org/10.1145/583852.581484},
+  publisher = {ACM},
+  address = {New York, NY, USA},
+}
+
+@inproceedings{felleisen06,
+  author = {Sam Tobin-Hochstadt and Matthias Felleisen},
+  title = {Interlanguage migration: from scripts to programs},
+  booktitle = {OOPSLA '06: Companion to the 21st ACM SIGPLAN conference on Object-oriented programming systems, languages, and applications},
+  year = {2006},
+  isbn = {1-59593-491-X},
+  pages = {964--974},
+  location = {Portland, Oregon, USA},
+  doi = {http://doi.acm.org/10.1145/1176617.1176755},
+  publisher = {ACM},
+  address = {New York, NY, USA},
+}
+
+@article{findler07,
+  author = {Jacob Matthews and Robert Bruce Findler},
+  title = {Operational semantics for multi-language programs},
+  journal = {SIGPLAN Not.},
+  volume = {42},
+  number = {1},
+  year = {2007},
+  issn = {0362-1340},
+  pages = {3--10},
+  doi = {http://doi.acm.org/10.1145/1190215.1190220},
+  publisher = {ACM},
+  address = {New York, NY, USA},
+}
+
+@inproceedings{henglein95,
+  author = {Fritz Henglein and Jakob Rehof},
+  title = {Safe polymorphic type inference for a dynamically typed language: translating Scheme to ML},
+  booktitle = {FPCA '95: Proceedings of the seventh international conference on Functional programming languages and computer architecture},
+  year = {1995},
+  isbn = {0-89791-719-7},
+  pages = {192--203},
+  location = {La Jolla, California, United States},
+  doi = {http://doi.acm.org/10.1145/224164.224203},
+  publisher = {ACM},
+  address = {New York, NY, USA},
+}
+
+@mastersthesis{kinghorn07,
+  author = {David L. Kinghorn},
+  title = {Preserving Parametricity While Sharing Higher-Order, Polymorphic Functions Between Scheme And ML},
+  school = {California Polytechnic State University, San Luis Obispo},
+  year = {2007},
+  OPTmonth = {June},
+}
+
+@manual{microsoft07,
+  title = {Microsoft Interface Definition Language},
+  OPTorganization = {Microsoft},
+  OPTmonth = {November},
+  OPTyear = {2007},
+}
+
+@manual{omg04,
+  title = {Common Object Request Broker Architecture (CORBA) Specification},
+  OPTorganization = {Object Management Group},
+  OPTedition = {3.1},
+  OPTmonth = {August},
+  OPTyear = {2004},
+}
