--- a/chapter-5.tex
+++ b/chapter-5.tex
@@ -1,2 +1,10 @@
 \chapter{Related Work}
 
+higher-order functions
+parametric polymorphism
+parametricity
+multiple type systems
+multiple evaluation strategies (with compound types and recursive lazy data)
+
+Perhaps the most mainstream systems of interoperation are the Common Object Request Broker Architecture (CORBA), the Component Object Model (COM), and the .NET Framework, yet not one of them supports interoperation between Haskell, ML, and Scheme as this model and implementation does.  CORBA, COM, and the .NET Framework support the interoperation of static and dynamic type systems and strict evaluation but do not support the interoperation of higher-order functions, parametric polymorphism, parametricity, or lazy evaluation \cite{omg04} \cite{microsoft07} \cite{ecma06}.
+
