--- a/thesis.tex
+++ b/thesis.tex
@@ -107,10 +107,11 @@
 \input{chapter-4.tex}
 \input{chapter-5.tex}
 \input{chapter-6.tex}
+\input{chapter-7.tex}
 
 \clearpage
 \bibliography{bibliography}
 \bibliographystyle{plain}
-%\addcontentsline{toc}{chapter}{Bibliography}
+\addcontentsline{toc}{chapter}{Bibliography}
 
 \end{document}
