--- a/bibliography.bib
+++ b/bibliography.bib
@@ -75,6 +75,19 @@
   address = {New York, NY, USA},
 }
 
+@inproceedings{guha07,
+  author = {Arjun Guha and Jacob Matthews and Robert Bruce Findler and Shriram Krishnamurthi},
+  title = {Relationally-parametric polymorphic contracts},
+  booktitle = {DLS '07: Proceedings of the 2007 symposium on Dynamic languages},
+  year = {2007},
+  isbn = {978-1-59593-868-8},
+  pages = {29--40},
+  location = {Montreal, Quebec, Canada},
+  doi = {http://doi.acm.org/10.1145/1297081.1297089},
+  publisher = {ACM},
+  address = {New York, NY, USA},
+}
+
 @inproceedings{henglein95,
   author = {Fritz Henglein and Jakob Rehof},
   title = {Safe polymorphic type inference for a dynamically typed language: translating Scheme to ML},
